--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,16 @@
-<footer class="footer mt-auto bg-dark">
+<footer class="footer mt-auto py-3 bg-dark bg-gradient">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
                 <ul class="list-unstyled text-white">
                     <li>
-                        <h5><i class="bi bi-envelope"></i><a href="mailto:{{ site.mail }}" class="text-decoration-none text-white">{{ site.mail }}</a></h5>
+                        <address><i class="bi bi-envelope"></i><a href="mailto:{{ site.mail }}" class="text-decoration-none text-white">{{ site.mail }}</a></address>
                     </li>
                     <li>
-                        <h5><i class="bi bi-phone"></i><a href="tel:{{ site.telephone }}" class="text-decoration-none text-white font-monospace">{{ site.phone }}</a></h5>
+                        <address><i class="bi bi-phone"></i><a href="tel:{{ site.telephone }}" class="text-decoration-none text-white font-monospace">{{ site.phone }}</a></address>
                     </li>
                     <li>
-                        <h5><i class="bi bi-geo-alt"></i>{{ site.localtion_address }}</h5>
+                        <address><i class="bi bi-geo-alt"></i>{{ site.localtion_address }}</address>
                     </li>
                 </ul>
             </div>
