--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-    <link rel="icon" href="{{ "/assets/image/运.svg" | absolute_url }}" crossorigin="anonymous">
-    <script src="{{ "/assets/search.js"| absolute_url }}"></script>
-    <script src="{{ "/assets/js/popper.js"| absolute_url }}"></script>
-    <script src="{{ "/assets/js/bootstrap/bootstrap.min.js"| absolute_url }}"></script>
+    <link rel="icon" href="{{ "/assets/image/运.svg" | relative_url }}" crossorigin="anonymous">
+    <script src="{{ "/assets/search.js"| relative_url }}"></script>
+    <script src="{{ "/assets/js/popper.js"| relative_url }}"></script>
+    <script src="{{ "/assets/js/bootstrap/bootstrap.min.js"| relative_url }}"></script>
     <style type="text/css">
     /*    #home {
         background-color: #FF3CAC;
