--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,15 +56,15 @@ pre>button:hover {
     <!-- LikeBtn.com BEGIN -->
     <span class="likebtn-wrapper py-4 start-50" data-lang="zh_CN" data-ef_voting="grow" data-identifier="item_1" data-counter_type="percent" data-counter_count="true" data-share_size="small"></span>
 </div>
-<script src="/assets/js/highlight.min.js"></script>
-<script type="text/javascript" src="/assets/js/highlight.ln.js"></script>
+<script src="{{ "/assets/js/highlight.min.js"></script>
+<script type="text/javascript" src="{{ "/assets/js/highlight.ln.js"></script>
 <script>
 hljs.highlightAll();
 </script>
-<script type="text/javascript" src="/assets/clipboard.min.js"></script>
-<script type="text/javascript" src="/assets/copy_button.js"></script>
-<script src="/assets/js/anchor_431.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="/assets/copy_anchor.js"></script>
+<script type="text/javascript" src="{{ "/assets/clipboard.min.js" | relative_url }}"></script>
+<script type="text/javascript" src="{{ "/assets/copy_button.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/anchor_431.js" | relative_url }}" crossorigin="anonymous"></script>
+<script type="text/javascript" src="{{ "/assets/copy_anchor.js" | relative_url }}"></script>
 <script>
 anchors.options = {
     visible: 'hover',
