--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,6 +60,7 @@ pre>button:hover {
 <script src="{{ "/assets/js/highlight.ln.js" | relative_url }}"></script>
 <script>
 hljs.highlightAll();
+hljs.configure({ cssSelector: "code" });
 </script>
 <script src="{{ "/assets/clipboard.min.js" | relative_url }}"></script>
 <script src="{{ "/assets/copy_button.js" | relative_url }}"></script>
