--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
     <script src="{{ "/assets/search.js"| relative_url }}"></script>
     <script src="{{ "/assets/js/popper.js"| relative_url }}"></script>
     <script src="{{ "/assets/js/bootstrap/bootstrap.min.js"| relative_url }}"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9377411670182351"
+     crossorigin="anonymous"></script>
     <style type="text/css">
     /*    #home {
         background-color: #FF3CAC;
